<resources>
    <string name="app_name">andprojekt</string>
    <string name="title_home">Home</string>
    <string name="title_my_overview">My Overview</string>
    <string name="title_profile">Profile</string>
    <string name="title_group_overview">Group Overview</string>



    <string name="total_remaining">"Total remaining: "</string>
    <string name="start_new_month">Start new month</string>
    <string name="add_member">Add member</string>
    <string name="statistics">Statistics</string>
    <string name="welcome">Welcome</string>
    <string name="need_group">No group tied to user</string>
    <string name="create_group">Create new group</string>
    <string name="current_month">Current Month</string>
    <string name="last_month">Last Month</string>
    <string name="all_time">Alltime Stats</string>
    <string name="my_month">My Month</string>
    <string name="monthly_overview">Monthly Overview</string>
    <string name="add_entry">Add New Entry</string>
    <string name="entries_this_month">Entries this month</string>
    <string name="add_new_entry">Add new Entry</string>
    <string name="meat">Meat</string>
    <string name="veggies">Veggies</string>
    <string name="fruit">Fruit</string>
    <string name="grains">Grains</string>
    <string name="dairy">Dairy</string>
    <string name="frozen">Frozen</string>
    <string name="other">Other</string>
    <string name="itemhint">Type item</string>
    <string name="pricehint">Enter price</string>
    <string name="group_name">Type Group Name</string>
    <string name="budget_per_person">Enter Budget pr. Person</string>
    <string name="form_add_new_member">Form: Add New Member</string>
    <string name="type_user_id">Type in User ID</string>
    <string name="type_name">Type in Name</string>
    <string name="create">Create</string>
    <string name="form_create_new_group">Form: Create new group</string>
    <string name="your_info">Your Info</string>
    <string name="type_a_name">Type in your name</string>
    <string name="userid">UserId</string>
    <string name="display_name">Display Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="deli">Deli</string>
    <string name="item_name">Item Name</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
</resources>